# ai-debate-lab

./: .gitignore  README.md  agents.yaml  pyproject.toml
.superpowers/sdd/: final-review-fix-2-report.md  final-review-fix-report.md  task-1-report.md
debatelab/: cli.py  livestatus.py  orchestrator.py  prompts.py  protocol.py  replay.py  result.py  retry.py  store.py  workspace.py
debatelab/agents/: api_agent.py  base.py  cli_agent.py  models.py  registry.py
plans/: 2026-07-14-ai-debate-lab.md  2026-07-14-protocol-correctness.md  2026-07-15-agent-reliability.md  2026-07-15-reliability-leftovers.md  2026-07-15-synthesis-phase.md  2026-07-15-transcript-replay.md  2026-07-15-viewer-rendering.md  2026-07-15-workspace-grounded-debates.md
specs/: 2026-07-14-ai-debate-lab-design.md  2026-07-14-protocol-correctness-design.md  2026-07-15-agent-reliability-design.md  2026-07-15-reliability-leftovers-design.md  2026-07-15-result-presentation-design.md  2026-07-15-synthesis-phase-design.md  2026-07-15-transcript-replay-design.md  2026-07-15-viewer-rendering-design.md  2026-07-15-workspace-grounded-debates-design.md
tests/: conftest.py  test_agent_error.py  test_api_agent.py  test_cli.py  test_cli_agent.py  test_integration.py  test_livestatus.py  test_lock.py  test_models.py  test_orchestrator.py  test_package.py  test_prompts.py  test_protocol.py  test_registry.py  test_registry_timeouts.py  test_replay.py  test_replay_differential.py  test_result.py  test_retry.py  test_serve.py  test_store.py  test_viewer_render.py  test_workspace.py  test_workspace_agents.py
(+1 files in other folders)
