[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "debatelab"
version = "0.1.0"
description = "Multi-agent AI debate orchestrator with human-approved consensus"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
debate = "debatelab.cli:main"

[tool.setuptools.packages.find]
include = ["debatelab*"]

[tool.setuptools.package-data]
debatelab = ["viewer/*.html"]
